istio-demoapp/case-12-http-retry/virtualservice-proxy-retry.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: proxy
spec:
  hosts:
  - "proxy.90data.net"
  gateways:
  - istio-system/proxy-gateway
  #- meth
  http:
  - name: default
    route:
    - destination:
        host: proxy
    timeout: 1s
    retries:
      attempts: 5
      perTryTimeout: 1s
      retryOn: 5xx,connect-failure,refused-stream
